--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .container {
-    background-color: beige;
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
+    background-color: cyan;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+}
+
+body {
+    margin: 0;
 }
 
 #canvas {
