--- a/public/style.css
+++ b/public/style.css
@@ -22,5 +22,14 @@ body {
     left: 0%;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+}
+
+.attributions {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    height: 2rem;
 }
