--- a/public/style.css
+++ b/public/style.css
@@ -25,11 +25,20 @@ body {
     height: 100vh;
 }
 
+a {
+    color: turquoise;
+}
+
 .attributions {
     position: absolute;
     bottom: 0;
     left: 0;
+    padding: 1rem;
     text-align: center;
     width: 100%;
     height: 2rem;
+    color: white;
+    font-size: smaller;
+    text-shadow: 0px 0px 3px black;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
