--- a/public/style.css
+++ b/public/style.css
@@ -16,12 +16,12 @@ body {
     /* width: 300px; */
 }
 
-#view {
+#canvas {
     position: absolute;
     top: 0%;
-    left: 20rem;
-    padding: 0rem;
-    width: calc(100vw - 20rem);
+    left: 0%;
+    margin: 0;
+    width: 100%;
     height: 100vh;
 }
 
